--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "ngx-quill": "25.1.1",
         "perfect-scrollbar": "1.5.5",
         "rxjs": "7.8.1",
+        "sweetalert2": "^11.26.3",
         "tslib": "2.6.2",
         "zone.js": "0.14.4"
     },
